final-cicd-ags-alb-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Template for deploying dotnet app (cicd)

Parameters:
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.192.0.0/16
  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.192.20.0/24
  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.192.21.0/24
  PrivateSubnet3CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.192.22.0/24
  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.192.10.0/24
  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.192.11.0/24
  PublicSubnet3CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.192.12.0/24
  Token:
    Type: String
    Description: Github token.
  MyPublicIP:
    Type: String
    Description: My own public IP.
    Default: 86.236.61.199/32
  MyKeyName:
    Type: String
    Description: My own key name.
    Default: pcourt-01
  Env:
    Type: String
    Description: ...
    Default: prod
  DbUser:
    Type: String
    Description: ...
    Default: admin
  DbPassword:
    Type: String
    Description: ...
    Default: Coucou123!
  BranchRepo:
    Type: String
    Description: ...
    Default: master
  GitRepo:
    Type: String
    Description: ...
    Default: DjangoApp
  GithubUser:
    Type: String
    Description: ...
    Default: Piercuta
  ApplicationName:
    Type: String
    Description: ...
    Default: djangoapp
  DllToStart:
    Type: String
    Description: ...
    Default: ChoixResto.dll
  Client:
    Type: String
    Description: ...
    Default: piercuta

Resources:
  
  # Network
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-vpc
        - Key: env
          Value: !Ref Env

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-igw
        - Key: env
          Value: !Ref Env

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-public-subnet-1
        - Key: env
          Value: !Ref Env

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-public-subnet-2
        - Key: env
          Value: !Ref Env

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet3CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-public-subnet-3
        - Key: env
          Value: !Ref Env
  
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-public-route-table
        - Key: env
          Value: !Ref Env

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  
  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-private-subnet-1
        - Key: env
          Value: !Ref Env

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-private-subnet-2
        - Key: env
          Value: !Ref Env

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet3CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-private-subnet-3
        - Key: env
          Value: !Ref Env

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-eip-1

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-eip-2

  NatGateway3EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-eip-3

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-nat-gtw-1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-nat-gtw-2

  NatGateway3:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway3EIP.AllocationId
      SubnetId: !Ref PublicSubnet3
      Tags:
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-nat-gtw-3
  
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-private-route-table-1
        - Key: env
          Value: !Ref Env

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
      # Tags:
      #   - Key: Name
      #     Value: !Sub ${Client}-${Env}-default-private-route-1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-private-route-table-2
        - Key: env
          Value: !Ref Env

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
      # Tags:
      #   - Key: Name
      #     Value: !Sub ${Client}-${Env}-default-private-route-3

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  PrivateRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-private-route-table-3
        - Key: env
          Value: !Ref Env

  DefaultPrivateRoute3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway3
      # Tags:
      #   - Key: Name
      #     Value: !Sub ${Client}-${Env}-default-private-route-3

  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable3
      SubnetId: !Ref PrivateSubnet3

  # Database
  
  InstanceSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties: 
      DBSubnetGroupDescription: subnet group for instance mysql
      DBSubnetGroupName: !Sub ${Client}-${Env}-${ApplicationName}-rds-subnet-group
      SubnetIds: 
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3
      Tags: 
        - Key: env
          Value: !Ref Env

  RDSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${Client}-${Env}-${ApplicationName}-rds-sg
      VpcId: !Ref VPC
      GroupDescription: SecurityGroup for RDS instance.
      SecurityGroupIngress:
        - SourceSecurityGroupId: !GetAtt CodeBuildSecurityGroup.GroupId 
          FromPort: '3306'
          ToPort: '3306'
          IpProtocol: tcp
        - SourceSecurityGroupId: !GetAtt EC2SecurityGroup.GroupId 
          FromPort: '3306'
          ToPort: '3306'
          IpProtocol: tcp
        - CidrIp: !Ref MyPublicIP
          IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
      Tags: 
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-${ApplicationName}-rds-sg

  RDSInstance:
    Type: 'AWS::RDS::DBInstance'
    DeletionPolicy: Delete
    Properties:
      MasterUserPassword: !Ref DbPassword
      DBInstanceClass: db.t2.micro
      DBSubnetGroupName: !Ref InstanceSubnetGroup
      VPCSecurityGroups:
        - !Ref RDSSecurityGroup
      MasterUsername: !Ref DbUser
      DBInstanceIdentifier: !Sub ${Client}-${Env}-${ApplicationName}-db-mysql
      MultiAZ: false
      PubliclyAccessible: true
      Engine: mysql
      AllocatedStorage: 5
      Tags: 
        - Key: env
          Value: !Ref Env

  # Application
  EC2SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${Client}-${Env}-${ApplicationName}-ec2-sg
      VpcId: !Ref VPC
      GroupDescription: SecurityGroup for EC2 instance.
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: '22'
          ToPort: '22'
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: '8000'
          ToPort: '8000'
          IpProtocol: tcp
       
      Tags: 
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-${ApplicationName}-ec2-sg
    
  EC2InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref EC2InstanceRole

  EC2InstanceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName:  !Sub ${Client}-${Env}-${ApplicationName}-instance-role
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM'
        - 'arn:aws:iam::aws:policy/AdministratorAccess'
      Path: /
      Tags: 
        - Key: Name
          Value: !Sub ${Env}-instance-role
        - Key: env
          Value: !Ref Env
  
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Client}-${Env}-${ApplicationName}-alb-sg
      GroupDescription: "Security group for alb"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
      Tags: 
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-${ApplicationName}-alb-sg

  ApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Sub ${Client}-${Env}-${ApplicationName}-alb
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets: 
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-${ApplicationName}-alb
        - Key: env
          Value: !Ref Env

  ALBListener80:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: "redirect"
          RedirectConfig:
            Protocol: "HTTPS"
            Port: 443
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
            StatusCode: "HTTP_301"
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: "HTTP"

  ALBListener443:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          # ForwardConfig:
          #   TargetGroups:
          #     - TargetGroupArn: !Ref ALBTargetGroup5001
          #       Weight: 1
          #     - TargetGroupArn: !Ref ALBTargetGroup5000
          #       Weight: 1
          #   TargetGroupStickinessConfig:
          #     DurationSeconds: 300
          #     Enabled: true
          # For having only one target group
          TargetGroupArn: !Ref ALBTargetGroup8000
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: '443'
      Protocol: HTTPS
      Certificates: 
        - CertificateArn: arn:aws:acm:eu-west-1:647408608766:certificate/a5b6add8-26ef-4a5b-95c1-0469f2a2f82d

  ALBTargetGroup8000:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub ${Client}-${Env}-${ApplicationName}-tg-8000
      HealthCheckPath: /
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Port: 8000
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref VPC
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: 'true'
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: '30'
      Tags:
        - Key: Name
          Value: !Sub ${Client}-${Env}-${ApplicationName}-tg-8000
        - Key: env
          Value: !Ref Env

  AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    DependsOn: 
      - RDSInstance
    Properties:
      AutoScalingGroupName: !Sub ${Client}-${Env}-${ApplicationName}-asg
      VPCZoneIdentifier: 
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3
      LaunchTemplate:
        LaunchTemplateId: !Ref AutoScalingLaunchTemplate
        Version: !GetAtt 
          - AutoScalingLaunchTemplate
          - LatestVersionNumber
      MinSize: '1'
      MaxSize: '2'
      DesiredCapacity: '1'
      HealthCheckType: ELB
      HealthCheckGracePeriod: '300'
      TargetGroupARNs:
        - !Ref ALBTargetGroup8000
      Tags:
        - Key: Name
          PropagateAtLaunch: true
          Value: !Sub ${Client}-${Env}-${ApplicationName}-instance
        - Key: app
          PropagateAtLaunch: true
          Value: !Ref ApplicationName
        - Key: env
          PropagateAtLaunch: true
          Value: !Ref Env
        - Key: deploy
          PropagateAtLaunch: true
          Value: !Sub ${Client}-${Env}-${ApplicationName}-deploy

  AutoScalingLaunchTemplate:
    Type: 'AWS::EC2::LaunchTemplate'
    DependsOn:
      - EC2InstanceProfile
    Properties:
      LaunchTemplateName: !Sub ${Client}-${Env}-${ApplicationName}-lt
      LaunchTemplateData:
        ImageId: ami-08ca3fed11864d6bb
        InstanceType: t2.micro
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfile
        NetworkInterfaces:
          - AssociatePublicIpAddress: 'true'
            DeviceIndex: 0
            Groups:
              - !Ref EC2SecurityGroup
        KeyName: !Ref MyKeyName
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              VolumeSize: 60
              VolumeType: gp2
        UserData:
          Fn::Base64: !Sub |
             #!/bin/bash -xe
             echo "START user data instructions"
             
             apt install -y ruby
             cd /tmp/
             wget 'https://aws-codedeploy-eu-west-1.s3.eu-west-1.amazonaws.com/latest/install'
             chmod +x ./install
             sudo ./install auto
            
             apt install python3-pip
             apt install python3-dev build-essential -y
             apt install libssl1.1 -y
             apt install libssl1.1=1.1.1f-1ubuntu2 -y
             apt install libssl-dev -y
             apt install libmysqlclient-dev -y
             apt install libpq-dev -y
             
             echo "END user data instructions"
          
        TagSpecifications:
          - ResourceType: volume
            Tags: 
              - Key: env
                Value: !Ref Env
  
  # CICD
  DeployApplication:
    Type: 'AWS::CodeDeploy::Application'
    Properties:
      ApplicationName: !Sub ${Client}-${Env}-${ApplicationName}-app
      ComputePlatform: Server
      Tags: 
        - Key: env
          Value: !Ref Env
          
  DeploymentGroup:
    Type: 'AWS::CodeDeploy::DeploymentGroup'
    Properties:
      ApplicationName: !Ref DeployApplication
      Ec2TagFilters:
        - Key: deploy
          Type: KEY_AND_VALUE
          Value: !Sub ${Client}-${Env}-${ApplicationName}-deploy
      ServiceRoleArn: !GetAtt 
        - CodeDeployDGRole
        - Arn
      AutoScalingGroups:
        - Ref: AutoScalingGroup
      LoadBalancerInfo:
        TargetGroupInfoList:
          - Name: !GetAtt ALBTargetGroup8000.TargetGroupName
      AutoRollbackConfiguration:
        Enabled: true
        Events:
          - DEPLOYMENT_FAILURE

  CodeDeployDGRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName:  !Sub ${Client}-${Env}-${ApplicationName}-code-deploy-role
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service:
                - codedeploy.amazonaws.com
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AdministratorAccess'
      Path: /
      Tags: 
        - Key: env
          Value: !Ref Env

  CodeBuildRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName:  !Sub ${Client}-${Env}-${ApplicationName}-code-build-role
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service:
                - codebuild.amazonaws.com
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AdministratorAccess'
      Path: /
      Tags: 
        - Key: env
          Value: !Ref Env

  CodeBuildSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Client}-${Env}-${ApplicationName}-code-build-sg
      GroupDescription: "Security group for code build"
      SecurityGroupEgress:
      - IpProtocol: -1
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC
      Tags: 
        - Key: env
          Value: !Ref Env
        - Key: Name
          Value: !Sub ${Client}-${Env}-${ApplicationName}-code-build-sg

  CodeBuild:
    Type: 'AWS::CodeBuild::Project'
    Properties:
      Name: !Sub ${Client}-${Env}-${ApplicationName}-code-build-project
      Description: A description about my project
      LogsConfig:
        CloudWatchLogs: 
          Status: DISABLED 
      ServiceRole: !GetAtt 
        - CodeBuildRole
        - Arn
      Artifacts:
        Type: CODEPIPELINE
      Environment:
        Type: LINUX_CONTAINER
        ComputeType: BUILD_GENERAL1_SMALL
        Image: 'aws/codebuild/standard:5.0'
        EnvironmentVariables:
          - Name: RdsEndpoint
            Value: !GetAtt RDSInstance.Endpoint.Address
          - Name: ApplicationName
            Type: PLAINTEXT
            Value: !Ref ApplicationName
          - Name: CS
            Type: PLAINTEXT
            Value: !Join 
              - ''
              - - server=
                - !GetAtt 
                  - RDSInstance
                  - Endpoint.Address
                - ;user id=
                - !Ref DbUser
                - ;password=
                - !Ref DbPassword
                - ;database=ChoixResto
      Source:
        Type: CODEPIPELINE
      VpcConfig:
        SecurityGroupIds: 
          - !Ref CodeBuildSecurityGroup
        Subnets: 
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
          - !Ref PrivateSubnet3
        VpcId: !Ref VPC
      Tags: 
        - Key: env
          Value: !Ref Env

  CodePipelineRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName:  !Sub ${Client}-${Env}-${ApplicationName}-code-pipeline-role
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service:
                - codepipeline.amazonaws.com
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AdministratorAccess'
      Path: /
      Tags: 
        - Key: env
          Value: !Ref Env

  ArtifactBucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: !Sub ${Client}-${Env}-${ApplicationName}-artifact-bucket
      VersioningConfiguration:
        Status: Enabled
      Tags: 
        - Key: env
          Value: !Ref Env

  Secret:
    Type: AWS::SecretsManager::Secret
    Properties: 
      Description: 'Token for accessing github repo'
      Name:
        !Sub
          - 'github_token_${client}_${environment}_${application_name}'
          - { client: !Ref Client , environment: !Ref Env, application_name: !Ref ApplicationName }
      SecretString: 
        !Sub
          - '{"github_access_token_${client}_${environment}_${application_name}": "${token}"}'
          - { client: !Ref Client, environment: !Ref Env, application_name: !Ref ApplicationName, token: !Ref Token } 
      Tags: 
        - Key: env
          Value: !Ref Env

  CodePipeline:
    Type: 'AWS::CodePipeline::Pipeline'
    DependsOn: Secret
    Properties:
      Name: !Sub ${Client}-${Env}-${ApplicationName}-code-pipeline
      ArtifactStore:
        Location: !Ref ArtifactBucket
        Type: S3
      RoleArn: !GetAtt 
        - CodePipelineRole
        - Arn
      RestartExecutionOnUpdate: true
      Stages:
        - Actions:
            - Name: SourceAction
              ActionTypeId:
                Category: Source
                Owner: ThirdParty
                Version: 1
                Provider: GitHub
              OutputArtifacts:
                - Name: SourceArtifact
              Configuration:
                Owner: !Ref GithubUser
                Repo: !Ref GitRepo
                Branch: !Ref BranchRepo
                OAuthToken: 
                    !Sub
                      - '{{resolve:secretsmanager:github_token_${client}_${environment}_${application_name}:SecretString:github_access_token_${client}_${environment}_${application_name}}}'
                      # - '{{resolve:secretsmanager:github_token_test_choixresto:SecretString:github_access_token_test_choixresto}}'
                      - { client: !Ref Client, environment: !Ref Env, application_name: !Ref ApplicationName }
                PollForSourceChanges: true
              RunOrder: 1
          Name: SOURCE
        - Name: Build
          Actions:
            - Name: BuildAction
              ActionTypeId:
                Category: Build
                Owner: AWS
                Version: '1'
                Provider: CodeBuild
              InputArtifacts:
                - Name: SourceArtifact
              OutputArtifacts:
                - Name: BuildArtifact
              Configuration:
                ProjectName: !Ref CodeBuild
              RunOrder: 1
        - Name: Deploy
          Actions:
            - Name: DeployAction
              InputArtifacts:
                - Name: BuildArtifact
              ActionTypeId:
                Category: Deploy
                Owner: AWS
                Version: '1'
                Provider: CodeDeploy
              Configuration:
                ApplicationName: !Ref DeployApplication
                DeploymentGroupName: !Ref DeploymentGroup
              RunOrder: 1
      Tags: 
        - Key: env
          Value: !Ref Env

Outputs: {}
